fixed resume alignment and misc errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,6 @@
     width: 90%;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .g-sectionBox h2 {
@@ -147,19 +146,27 @@
     width: 48%;
     margin-left: 0;
     margin-right: auto;
-    padding: 0px 10px;
+    padding: 10px 10px;
+    border: 2px solid black;
+    border-radius: 10px;
 }
 
 .right {
     width: 48%;
     margin-right: 0;
     margin-left: auto;
-    padding: 0px 10px;
+    padding: 10px 10px;
+    border: 2px solid black;
+    border-radius: 10px;
 }
 
 /*--------------------------------Other Page Styles */
 .p-other .g-main { 
     background-color: #1a445c; 
+}
+
+.p-other .g-sectionBox {
+    align-items: center;
 }
 
 .p-other img {
